2007-02-19 [wwp]	0.1.0cvs6

	* po/.cvsignore
		More files to ignore.

2007-02-19 [paul]	0.1.0cvs5

	* README
		List dependancies
	* config.h.in
		removed
	* configure.ac
		Remove Curl dependancy (wrongly pasted)
		Add gs dependancy for Postscript files
	* src/poppler_viewer.c
		fix ps handling
		Thanks to Colin

2007-02-19 [paul]	0.1.0cvs4

	* src/poppler_viewer.c
		Display error on broken files, and cleanup display
		Handle Postscript files
		Thanks to Colin

2007-02-19 [paul]	0.1.0cvs3

	* src/poppler_viewer.c
		make plugin_name translatable
		adjust plugin_desc

2007-02-19 [colin]	0.1.0cvs2

	* src/Makefile.in
		Remove wrongly-added file

2007-02-19 [colin]	0.1.0cvs1

	* .cvsignore
	* AUTHORS
	* COPYING
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* README
	* autogen.sh
	* commitHelper
	* config.h.in
	* configure.ac
	* config/.cvsignore
	* config/Makefile.am
	* config/config.rpath
	* config/mkinstalldirs
	* po/.cvsignore
	* po/ChangeLog
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/fr.po
	* po/remove-potcdate.sin
	* src/.cvsignore
	* src/Makefile.am
	* src/Makefile.in
	* src/gettext.h
	* src/poppler_viewer.c
		Initial release
		The PopplerViewer plugin, written by Salvatore
		De Paolis, displays PDFs mimepart in the 
		messageview.
